--- a/projeto-social/index.html
+++ b/projeto-social/index.html
@@ -5,9 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./imagens/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Olá mundo</h1>
+    <main>
+        <section id="telefone">
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+        </section>
+        <section id="redes">
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt=""></a> <br>  
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a> <br>
+            <a href="" target="tela"><img src="imagens/logo-github.jpg" alt=""></a> <br>
+            <a href="" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a> <br>
+            <a href="" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a> <br>
+            <a href="" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a> <br>
+        </section>
+    </main>
 </body>
 </html>
