--- a/projeto-social/instagram.html
+++ b/projeto-social/instagram.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="tela-youtube">
-    <a href="https://www.youtube.com/@CursoemVideo" target="_blank">Acesse</a>
+    <img src="imagens/tela-instagram.jpg" alt="tela-instagram">
+    <a href="https://www.instagram.com/gustavoguanabara/" target="_blank">Acesse</a>
 </body>
 </html>
